Fix: venv, bd como variable de entorno, usuarios

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     depends_on:
       - db
     env_file:
-      - .env
+      - venv/.env
   db:
     image: mysql:latest
     environment:
