--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,5 +18,9 @@ services:
       MYSQL_DATABASE: ${DB_NAME}
       MYSQL_USER: ${DB_USER}
       MYSQL_PASSWORD: ${DB_PASSWORD}
+      # MYSQL_ROOT_PASSWORD: root
+      # MYSQL_DATABASE: ecommerce
+      # MYSQL_USER: user
+      # MYSQL_PASSWORD: 123
     ports:
       - "3307:3306"
